# Artify

./: CMakeLists.txt  README.md
fonts/: abc.h  abc.hpp  default.h  default.hpp  regular.h  shady.h  shady.hpp  tiny.h  tiny.hpp
include/: TTSCI_LIB.h  libartify.hpp
src/: TTSCI_LIB.cpp  libartify.cpp  main.cpp
src/fonts/: abc.cpp  default.cpp  regular.cpp  shady.cpp  tiny.cpp
